Create initial app flow
- Add .env support
- Add CSS framework and font
- Add localization support
- Create component structure

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Blank Template",
-    "slug": "tracemission",
+    "slug": "store",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
