--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-localization": "^8.0.0",
+    "i18n-js": "^3.5.1",
+    "path": "^0.12.7",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-material-ui": "^1.30.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "^7.0.0",
+    "babel-plugin-inline-dotenv": "^1.5.0",
+    "babel-preset-expo": "~8.0.0"
   },
   "private": true
 }
