--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "~36.0.0",
     "expo-barcode-scanner": "~8.0.0",
     "expo-permissions": "~8.0.0",
+    "expo-linear-gradient": "^8.0.0",
     "expo-localization": "^8.0.0",
     "i18n-js": "^3.5.1",
     "react": "~16.9.0",
