--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-linear-gradient": "^8.0.0",
     "expo-localization": "^8.0.0",
     "i18n-js": "^3.5.1",
     "path": "^0.12.7",
