--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "tracemission",
     "slug": "store",
     "privacy": "public",
     "sdkVersion": "36.0.0",
