Showcase QR-Code rendering

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 VERSION=
 DEFAULT_LOCALE=
-QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
+QR_CODE_PATTERN=^(?<protocol>http[s]?)://tracemission.app/(?<space>[A-z]+)/(?<id>[A-z0-9]+)$
+QR_CODE_CONTENT=https://tracemission.app/l/%id
