--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "dependencies": {
     "expo": "~36.0.0",
     "expo-barcode-scanner": "~8.0.0",
-    "expo-permissions": "~8.0.0",
     "expo-linear-gradient": "^8.0.0",
     "expo-localization": "^8.0.0",
+    "expo-permissions": "~8.0.0",
     "i18n-js": "^3.5.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-material-ui": "^1.30.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "superagent": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
