Add default values in template

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 VERSION=
-DEFAULT_LOCALE=
+DEFAULT_LOCALE=de
 QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
-BASE_URL=
+BASE_URL=https://api.tracemission.app
