Adapt pipelines to support app variants

--- a/.github/workflows/build-android-customer.yaml
+++ b/.github/workflows/build-android-customer.yaml
@@ -1,16 +1,21 @@
-name: Build Android App (Expo)
+name: Build Customer Android App (Expo)
 on:
   schedule:
     - cron: 55 * * * *
 jobs:
   publish:
-    name: Build Android App
+    name: Build Customer Android App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
+      - run: |
+          sed -i s/{APP_VARIANT}/customer/g app.json
+          echo "VERSION=0.${{ github.run_id }}" > .env
+          cat configuration/default.env >> .env
+          cat configuration/customer.env >> .env
       - uses: expo/expo-github-action@v5
         with:
           expo-version: 3.x
