--- a/.github/workflows/deploy-customer-web.yml
+++ b/.github/workflows/deploy-customer-web.yml
@@ -17,7 +17,7 @@ jobs:
           expo-version: 3.x
       - run: |
           sed -i s/{APP_VARIANT}/customer/g app.json
-          echo "VERSION=0.${{ github.run_id }}" > .env
+          echo "VERSION=0.${{ github.run_number }}" > .env
           cat configuration/default.env >> .env
           cat configuration/customer.env >> .env
       - run: yarn install
