--- a/.github/workflows/expo-customer-review.yml
+++ b/.github/workflows/expo-customer-review.yml
@@ -6,6 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: |
+          VARIANT=customer
+          sed -i s/{APP_VARIANT}/${VARIANT}/g app.json
+          echo "VERSION=0.${{ github.run_number }}" > .env
+          cat configuration/default.env >> .env
+          cat configuration/${VARIANT}.env >> .env
+          echo "Using environment:" && cat .env
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
@@ -14,15 +21,10 @@ jobs:
           expo-version: 3.x
           expo-username: ${{ secrets.EXPO_USERNAME }}
           expo-password: ${{ secrets.EXPO_PASSWORD }}
-      - run: |
-          sed -i s/{APP_VARIANT}/customer/g app.json
-          echo "VERSION=0.${{ github.run_id }}" > .env
-          cat configuration/default.env >> .env
-          cat configuration/customer.env >> .env
       - run: yarn install
       - run: expo publish --release-channel=pr-${{ github.event.number }}
       - uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: Customer App is ready for review, you can [see it here](https://exp.host/@${{ secrets.EXPO_USERNAME }}/store?release-channel=pr-${{ github.event.number }}).
+          msg: Customer App is ready for review, you can [see it here](https://exp.host/@${{ secrets.EXPO_USERNAME }}/customer?release-channel=pr-${{ github.event.number }}).
