--- a/app.json
+++ b/app.json
@@ -25,11 +25,11 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.tracemission.customer",
+      "bundleIdentifier": "app.tracemission.{APP_VARIANT}",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "app.tracemission.customer",
+      "package": "app.tracemission.{APP_VARIANT}",
       "versionCode": 1
     }
   }
