--- a/.github/workflows/build-android-store.yaml
+++ b/.github/workflows/build-android-store.yaml
@@ -1,10 +1,10 @@
-name: Build Customer Android App (Expo)
+name: Build Store Android App (Expo)
 on:
   schedule:
-    - cron: 55 * * * *
+    - cron: 25 * * * *
 jobs:
   publish:
-    name: Build Customer Android App
+    name: Build Store Android App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 12.x
       - run: |
-          VARIANT=customer
+          VARIANT=store
           sed -i s/appvariant/${VARIANT}/g app.json
           echo "VERSION=0.${{ github.run_number }}" > .env
           cat configuration/default.env >> .env
