--- a/.github/workflows/expo-customer-publish.yml
+++ b/.github/workflows/expo-customer-publish.yml
@@ -13,10 +13,12 @@ jobs:
         with:
           node-version: 12.x
       - run: |
-          sed -i s/{APP_VARIANT}/customer/g app.json
+          VARIANT=customer
+          sed -i s/appvariant/${VARIANT}/g app.json
           echo "VERSION=0.${{ github.run_number }}" > .env
           cat configuration/default.env >> .env
-          cat configuration/customer.env >> .env
+          cat configuration/${VARIANT}.env >> .env
+          echo "Using environment:" && cat .env
       - uses: expo/expo-github-action@v5
         with:
           expo-version: 3.x
