--- a/.github/workflows/expo-store-review.yml
+++ b/.github/workflows/expo-store-review.yml
@@ -1,27 +1,30 @@
-name: Build Customer Android App (Expo)
-on:
-  schedule:
-    - cron: 55 * * * *
+name: Expo Customer Review
+on: [pull_request]
 jobs:
   publish:
-    name: Build Customer Android App
+    name: Install and publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
       - run: |
-          VARIANT=customer
+          VARIANT=store
           sed -i s/appvariant/${VARIANT}/g app.json
           echo "VERSION=0.${{ github.run_number }}" > .env
           cat configuration/default.env >> .env
           cat configuration/${VARIANT}.env >> .env
           echo "Using environment:" && cat .env
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
       - uses: expo/expo-github-action@v5
         with:
           expo-version: 3.x
           expo-username: ${{ secrets.EXPO_USERNAME }}
           expo-password: ${{ secrets.EXPO_PASSWORD }}
       - run: yarn install
-      - run: expo build:android --generate-keystore
+      - run: expo publish --release-channel=${{ github.event.number }}
+      - uses: unsplash/comment-on-pr@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          msg: Store App is ready for review, you can [see it here](https://exp.host/@${{ secrets.EXPO_USERNAME }}/tracemission-store?release-channel=pr-${{ github.event.number }}).
