--- a/configuration/default.env
+++ b/configuration/default.env
@@ -1,3 +1,3 @@
 DEFAULT_LOCALE=de
 QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
-BASE_URL=https://api.tracemission.ap
+BASE_URL=https://api.tracemission.app
