--- a/.github/workflows/deploy-store-web.yml
+++ b/.github/workflows/deploy-store-web.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: appleboy/scp-action@master
         with:
           source: web-build
-          target: web-build-${{ github.run_id }}
+          target: web-build-store-${{ github.run_id }}
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -39,6 +39,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            mv -f htdocs www-store-old
-            mv -f web-build-${{ github.run_id }} htdocs-store 
+            mv -f htdocs-store www-store-old
+            mv -f web-build-store-${{ github.run_id }} htdocs-store 
             rm -rf www-store-old 
