Access env using react-native-dotenv

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ VERSION=
 DEFAULT_LOCALE=de
 QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
 BASE_URL=https://api.tracemission.app
+VARIANT=customer
