--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
