--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-material-ui": "^1.30.1",
+    "react-native-qrcode-svg": "^6.0.3",
+    "react-native-svg": "9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "superagent": "^5.2.2"
