--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-elements": "^1.2.7",
     "react-native-material-ui": "^1.30.1",
+    "react-native-qrcode-svg": "^6.0.3",
+    "react-native-svg": "9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "superagent": "^5.2.2"
