--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ DEFAULT_LOCALE=de
 QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
 BASE_URL=https://api.tracemission.app
 VARIANT=customer
+QR_CODE_CONTENT=https://tracemission.app/l/%id
