Add splash screen

--- a/app.json
+++ b/app.json
@@ -13,9 +13,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-appvariant.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0F1331"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
