Add env to pipeline default.env

--- a/configuration/default.env
+++ b/configuration/default.env
@@ -1,3 +1,5 @@
+VERSION=
 DEFAULT_LOCALE=de
-QR_CODE_PATTERN=^(?<protocol>http[s]?)://(?<space>[A-z]+).tracemission.app/(?<id>[A-z0-9]+)$
+QR_CODE_PATTERN=^(?<protocol>http[s]?)://tracemission.app/(?<space>[A-z]+)/(?<id>[A-z0-9]+)$
+QR_CODE_CONTENT=https://tracemission.app/l/%id
 BASE_URL=https://api.tracemission.app
